--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "10.0.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-stripe-checkout": "^2.6.3",
     "react-toastify": "^6.2.0"
   }
 }
